--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-	@apply bg-gradient-to-r from-slate-700 to-gray-800 overflow-hidden;
+	@apply bg-gradient-to-r from-slate-800 to-gray-700 overflow-hidden text-white;
 }
 
 ::-webkit-scrollbar-track {
