--- a/src/main.scss
+++ b/src/main.scss
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-	@apply bg-gradient-to-r from-slate-800 to-gray-700 overflow-hidden text-white;
+html {
+	@apply h-full bg-gradient-to-br from-blue-800 to-teal-800 text-white;
 }
 
 ::-webkit-scrollbar-track {
