--- a/src/main.scss
+++ b/src/main.scss
@@ -1,22 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-html {
-	@apply h-full bg-gradient-to-br from-blue-800 to-teal-800 text-white;
-}
-
-::-webkit-scrollbar-track {
-	background-color: #1F2937;
-}
-
-::-webkit-scrollbar {
-	width: 0.4rem;
-	height: 0.4rem;
-}
-
-::-webkit-scrollbar-thumb {
-	background-clip: padding-box;
-	border-radius: 10rem;
-	background-color: #838383;
-}
+@import "./styles/";
